@@ -101,6 +101,8 @@ const gchar *utils_get_eol_name(gint eol_mode);
 
 gboolean utils_atob(const gchar *str);
 
+void utils_tidy_path(gchar *filename);
+
 gboolean utils_is_absolute_path(const gchar *path);
 
 const gchar *utils_path_skip_root(const gchar *path);
