@@ -10,6 +10,9 @@
    implementation, as this is more useful potentially than a gpointer*
    argument, and more straightforward.
    Add foreach_c_array(), foreach_ptr_array() to API.
+ * src/utils.c, src/utils.h, src/document.c:
+   Remove relative/untidy path elements when opening documents (closes
+   #2823998).
 
 
 2009-07-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
